--- a/MyDict/app/src/main/res/values/strings.xml
+++ b/MyDict/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_word_definition_detail">word_definition_detail</string>
+
+    <string name="speech_prompt">Say something&#8230;</string>
+    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
 </resources>
